# rgb-issuers

./: README.md
compiled/: CollectibleFungibleAsset.issuer  NonInflatableAsset.issuer  NonInflatableAsset.schema  RGB20-FNA.issuer  RGB20-Simplest-v0-IehuJw.issuer  RGB20-Simplest-v0-NRIsWA.issuer  RGB20-Simplest.issuer  RGB21-DivisibleCollection.issuer  RGB21-FAC.issuer  RGB21-NFTCollection.issuer  RGB21-UAC.issuer  RGB21-UDA.issuer  RGB21-UniqueNFT-v0-9Fh0jw.issuer  RGB21-UniqueNFT-v0-FtU80Q.issuer  RGB21-UniqueNFT-v0-rLAuRQ.issuer  RGB21-UniqueNFT.issuer  RGB25-DUA.issuer  RGB25-FUA.issuer  RGB25-UniqueFungible.issuer  RGB25-UniquelyFungible-v0-_5GE0g.issuer  RGB25-UniquelyFungible-v0-aiRB3w.issuer  RGB25-UniquelyFungible.issuer  UniqueDigitalAsset.issuer
contractum/: Demo.con  RGB20.con  RGB21.con  nfa.con
contractum/rgb20/: FNA.con
rust/: Cargo.toml
rust/examples/: RGB20-Simplest.yaml  fna.rs
rust/src/: cfa.rs  lib.rs  nia.rs  scripts.rs  uda.rs
rust/src/ifaces/: mod.rs  rgb20.rs  rgb21.rs  rgb25.rs
rust/src/ifaces/rgb20/: fna.rs  mod.rs
rust/src/ifaces/rgb21/: dnc.rs  mod.rs  ndc.rs  nfa.rs  nfc.rs  nfu.rs  shared.rs
rust/src/ifaces/rgb25/: dua.rs  mod.rs  ufa.rs
rust/src/scripts/: collection.rs  dividable.rs  divisible.rs  fungible.rs  mod.rs  non_fungible.rs  shared.rs  unique.rs
templates/: RGB20-Simplest.yaml  RGB21-UniqueNFT.yaml  RGB25-UniquelyFungible.yaml
