[package]
name = "issuers"
version = "0.12.0-rc.1"
edition = "2021"
publish = false

[[bin]]
name = "fna"
path = "src/bin/rgb20/fna.rs"

[[bin]]
name = "nfa"
path = "src/bin/rgb21/nfa.rs"

[[bin]]
name = "nfc"
path = "src/bin/rgb21/nfc.rs"

[[bin]]
name = "dnc"
path = "src/bin/rgb21/dnc.rs"

[[bin]]
name = "ufa"
path = "src/bin/rgb25/ufa.rs"

[lib]

[dependencies]
amplify = "~4.9.0"
strict_types = "~2.9.0"
zk-aluvm = { version = "0.12.0-rc.1", features = ["std"] }
hypersonic = { version = "0.12.0-rc.1", features = ["std"] }
rgb-interfaces = "0.12.0-rc.1"

[dev-dependencies]
zk-aluvm = { version = "0.12.0-rc.1", features = ["std", "log"] }

[features]
default = ["std"]
all = ["std"]
std = [] # must-use feature
