[package]
name = "issuers"
version = "0.12.0-rc.1"
edition = "2021"
publish = false

[[bin]]
name = "fna"
path = "src/bin/rgb20/fna.rs"

[[bin]]
name = "nfu"
path = "src/bin/rgb21/nfu.rs"

[[bin]]
name = "nfc"
path = "src/bin/rgb21/nfc.rs"

[[bin]]
name = "ndc"
path = "src/bin/rgb21/ndc.rs"

[[bin]]
name = "ufa"
path = "src/bin/rgb25/ufa.rs"

[lib]

[dependencies]
amplify = "~4.9.0"
strict_types = "~2.9.0"
zk-aluvm = { version = "0.12.0-rc.1", features = ["std"] }
hypersonic = { version = "0.12.0-rc.1", features = ["std"] }
rgb-interfaces = "0.12.0-rc.1"

[dev-dependencies]
zk-aluvm = { version = "0.12.0-rc.1", features = ["std", "log"] }
hypersonic = { version = "0.12.0-rc.1", features = ["std", "serde"] }
serde_yaml = "0.9.34"

[features]
default = ["std"]
all = ["std"]
std = [] # must-use feature

[patch.crates-io]
rgb-interfaces = { git = "https://github.com/RGB-WG/rgb-interfaces", branch = "v0.12" }
ultrasonic = { git = "https://github.com/AluVM/ultrasonic", branch = "feat/opwitness" }
sonic-api = { git = "https://github.com/AluVM/sonic", branch = "feat/opwitness" }
sonic-callreq = { git = "https://github.com/AluVM/sonic", branch = "feat/opwitness" }
hypersonic = { git = "https://github.com/AluVM/sonic", branch = "feat/opwitness" }
